<resources>
    <string name="app_name">final_project</string>
    <string name="edt_nombre">¿Como te llamas?</string>
    <string name="btn_jugar">Jugar</string>

    <string name="txv_vidas">Manzanas:</string>
    <string name="txv_jugador_nombre">Jugador:</string>
    <string name="txv_total_score">Score: 0</string>
    <string name="btn_sumar">Comprobar</string>
    <string name="edt_respuesta">Respuesta</string>
    <string name="compartir">Compartir</string>
</resources>
