<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/wallpaperprincipal"
tools:context=".nivel2">

<TextView
    android:id="@+id/textView_score"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="36dp"
    android:text="@string/txv_total_score"
    android:textColor="@android:color/background_dark"
    android:textSize="18sp" />

<TextView
    android:id="@+id/textView_nombre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="10dp"
    android:text="@string/txv_jugador_nombre"
    android:textColor="@android:color/background_dark"
    android:textSize="18sp" />

<TextView
    android:id="@+id/textView_manzanas"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="61dp"
    android:text="@string/txv_vidas"
    android:textColor="@android:color/background_dark"
    android:textSize="18sp" />

<ImageView
    android:id="@+id/imageView_vidas"
    android:layout_width="80dp"
    android:layout_height="25dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="104dp"
    android:layout_marginLeft="104dp"
    android:layout_marginTop="61dp"
    android:contentDescription="@string/app_name"
    app:srcCompat="@drawable/tresvidas" />

<ImageView
    android:id="@+id/imageView_Num1"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="139dp"
    android:contentDescription="@string/app_name"
    app:srcCompat="@drawable/cero" />

<ImageView
    android:id="@+id/imageView_signo"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="145dp"
    android:layout_marginLeft="145dp"
    android:layout_marginTop="143dp"
    android:contentDescription="@string/app_name"
    app:srcCompat="@drawable/adicion" />

<ImageView
    android:id="@+id/imageView_Num2"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_marginTop="145dp"
    android:layout_marginEnd="2dp"
    android:layout_marginRight="2dp"
    android:contentDescription="@string/app_name"
    app:srcCompat="@drawable/cero" />

<EditText
    android:id="@+id/editText_resultado"
    android:layout_width="100dp"
    android:layout_height="40dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="109dp"
    android:layout_marginLeft="109dp"
    android:layout_marginBottom="195dp"
    android:ems="10"
    android:hint="@string/edt_respuesta"
    android:inputType="number" />

<Button
    android:id="@+id/button"
    android:layout_width="100dp"
    android:layout_height="30dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:layout_marginEnd="33dp"
    android:layout_marginRight="33dp"
    android:layout_marginBottom="198dp"
    android:background="@drawable/fondoboton"
    android:onClick="comparar"
    android:text="@string/btn_sumar"
    android:textColor="@android:color/background_light" />
    <TextView
        android:id="@+id/txv_cuentagresiva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="99dp"
        android:text="TextView" />

    <ProgressBar
        android:id="@+id/pgb_tiempo"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="129dp" />
</RelativeLayout>