<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView_personaje"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        app:srcCompat="@drawable/manzana" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edt_nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_jugar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="147dp"
        android:background="@drawable/fondoboton"
        android:onClick="jugar"
        android:text="@string/btn_jugar"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_bestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="46dp"
        android:background="@drawable/fondoet"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
</RelativeLayout>